--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head> 
 <body>
     <h1>Mad Moody of Mom!</h1>
-    <h2>just obey</h2>
+    <h2>just obey!</h2>
     <h3>don't argue</h3>
     <h4>dhe will kill u</h4>
 </body>
